[project]
name = "votify"
version = "1.6.3"
description = "A command-line app for downloading songs, podcasts and videos from Spotify."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "async-lru>=2.1.0",
    "click>=8.3.1",
    "colorama>=0.4.6",
    "dataclass-click>=1.0.4",
    "httpx>=0.28.1",
    "inquirerpy>=0.3.4",
    "mutagen>=1.47.0",
    "pillow>=12.1.0",
    "protobuf>=6.33.5",
    "pybase62>=1.0.0",
    "pycryptodome>=3.23.0",
    "pywidevine>=1.9.0",
    "yt-dlp>=2026.2.4",
]

[project.urls]
repository = "https://github.com/glomatico/votify"

[project.scripts]
votify = "votify.cli.cli:main"

[dependency-groups]
dev = [
    "asynctest>=0.13.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
]
