[project]
name = "votify"
version = "1.9"
description = "A command-line app for downloading songs, podcasts and videos from Spotify."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "async-lru>=2.1.0",
    "click>=8.3.1",
    "colorama>=0.4.6",
    "dataclass-click>=1.0.4",
    "httpx>=0.28.1",
    "inquirerpy>=0.3.4",
    "pillow>=12.1.0",
    "pybase62>=1.0.0",
    "pycryptodome>=3.23.0",
    "pywidevine>=1.9.0",
    "unplayplay @ https://github.com/cycyrild/another-unplayplay/archive/116c8f7e33045568e0b6f6a78061c21925dba7c5.zip",
    "yt-dlp>=2026.2.4",
]

[project.urls]
repository = "https://github.com/glomatico/votify"

[project.scripts]
votify = "votify.cli.cli:main"

[dependency-groups]
librespot = [
    "librespot @ https://github.com/kokarare1212/librespot-python/archive/bcea3f64e00a78d680074979f3bbba19584bfe0a.zip",
]
dev = [
    "asynctest>=0.13.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
]
